# PyBotterfly

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: configuration.md  example.md  reply.md
example/: create_users_table.py  pyproject.toml  requirements.txt  server.py  tg_client.py  vk_client.py
example/configs/: config.py  logger.py
example/configs/message_handler/: message_handler_config.py
example/configs/messengers_configs/: tg_config.py  vk_config.py
example/configs/reply/: reply_config.py
example/configs/transitions/: payloads_config.py  transitions_config.py
example/lib/: __init__.py  db_funcs.py  keyboards.py  pages.py  stages.py  texts.py  users.py
pybotterfly/: base_config.py
pybotterfly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pybotterfly/bot/: __init__.py  converters.py  struct.py
pybotterfly/bot/reply/: default_reply_types.py  reply_division.py
pybotterfly/bot/returns/: buttons.py  message.py
pybotterfly/bot/transitions/: payloads.py  schedule.py  transitions.py
pybotterfly/message_handler/: message_handler.py
pybotterfly/runners/: server.py  tg_client.py  vk_client.py
pybotterfly/server/: server.py  server_func.py  struct.py
